(refactor) Change order filtering to render client-side
